Fix search form alignment styles

--- a/assets/css/gm2-search-widget.css
+++ b/assets/css/gm2-search-widget.css
@@ -7,7 +7,7 @@
     --gm2-search-control-padding-x: 16px;
     --gm2-search-control-gap: 0px;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     width: 100%;
     background-color: #f4f5f7;
     border: 1px solid rgba(24, 31, 43, 0.12);
@@ -25,6 +25,7 @@
 .elementor-search-form__container > * {
     margin: 0;
     box-sizing: border-box;
+    align-self: stretch;
 }
 
 .elementor-search-form--skin-minimal .elementor-search-form__container {
@@ -35,7 +36,7 @@
 .elementor-search-form__category {
     flex: 0 0 auto;
     display: flex;
-    align-items: center;
+    align-items: stretch;
     min-height: var(--gm2-search-control-height);
 }
 
@@ -44,7 +45,7 @@
     min-width: 160px;
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: stretch;
 }
 
 .gm2-category-filter__toggle {
@@ -63,6 +64,7 @@
     height: 100%;
     min-height: var(--gm2-search-control-height);
     box-sizing: border-box;
+    background-color: inherit;
 }
 
 .elementor-search-form__category-select {
@@ -71,6 +73,7 @@
     padding: 0 var(--gm2-search-control-padding-x);
     box-sizing: border-box;
     border-radius: 0;
+    background-color: transparent;
 }
 
 .gm2-category-filter__toggle:focus {
@@ -227,6 +230,7 @@
     min-height: var(--gm2-search-control-height);
     height: 100%;
     box-sizing: border-box;
+    align-self: stretch;
 }
 
 .elementor-search-form__submit svg {
